@startuml
title Diagramme de classes — Agrégateur d'actualités

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "api" {
  class PreferencesApi {
    +getThemes(): Themes
    +postPreferences(req: PreferencesRequest): ThemeSelection
    +getNews(): List<News>
  }

  package "api.dto" {
    class ErrorResponse {
      -message: String
      -code: int
    }
    class PreferencesRequest {
      +userId: String
      +preferredThemes: List<String>
    }
    class ThemeSelection {
      +selected: List<String>
    }
    class Themes {
      +available: List<String>
    }
  }

  package "api.service" {
    class NewsService {
      +getNewsForUser(userId: String): NewsCollection
      +getNewsForThemes(themes: List<String>): NewsCollection
    }
    class NewsCollectionFactory {
      +fromSources(sources: List<RssFetcher>, themes: List<String>): NewsCollection
    }
    class NewsSorter {
      +sort(col: NewsCollection): NewsCollection
    }
    class LLMScorer {
      +score(news: List<News>, themes: List<String>): List<NewsCategoryScore>
    }
  }

  package "api.util" {
    class ApiException {
      +status: int
      +message: String
    }
    class CorsUtil {
      +apply()
    }
    class PreferencesUtils {
      +resolveThemes(req: PreferencesRequest): List<String>
    }
  }
}

package "model" {
  class News {
    +id: String
    +title: String
    +summary: String
    +url: String
    +source: String
    +publishedAt: Instant
    +scores: Map<String, Double>
  }
  class NewsCollection {
    +items: List<News>
    +add(n: News)
    +byTheme(theme: String): List<News>
  }
  class NewsCategoryScore {
    +newsId: String
    +category: String
    +score: double
  }
}

package "rss" {
  abstract class RssFetcher {
    +name: String
    +fetch(): List<News>
  }
  class LeMondeRSSFetcher extends RssFetcher
  ' Ajoutez d'autres fetchers ici si besoin
}

package "main" {
  class Main {
    +main(args: String[]): void
  }
}

' Relations
PreferencesApi --> NewsService : utilise
PreferencesApi --> PreferencesRequest
PreferencesApi --> ThemeSelection
PreferencesApi --> Themes
PreferencesApi ..> ErrorResponse : erreurs

NewsService --> NewsCollectionFactory : compose
NewsService --> NewsSorter : trie
NewsService --> LLMScorer : score
NewsCollectionFactory --> RssFetcher : collecte
NewsCollectionFactory --> NewsCollection : construit

LLMScorer --> NewsCategoryScore
NewsCollection o-- "1..*" News
News --> "0..*" NewsCategoryScore : agrège

Main --> PreferencesApi : bootstrap

RssFetcher <|-- LeMondeRSSFetcher

ApiException <.. PreferencesApi
CorsUtil <.. PreferencesApi
PreferencesUtils <.. PreferencesApi

@enduml
